--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "The user management service",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format:fix": "prettier . --write",
+    "format:check": "prettier . --check"
   },
   "author": "Amit Kumar <dashingak957014@gmail.com>",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^22.8.6",
+    "prettier": "3.3.3",
     "typescript": "^5.6.3"
   }
 }
