--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "format:fix": "prettier . --write",
     "format:check": "prettier . --check",
     "lint:check": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "prepare": "husky"
   },
   "author": "Amit Kumar <dashingak957014@gmail.com>",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "@types/eslint__js": "^8.42.3",
     "@types/node": "^22.8.6",
     "eslint": "^9.14.0",
+    "husky": "^9.1.6",
     "prettier": "3.3.3",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.12.2"
