--- a/package.json
+++ b/package.json
@@ -19,8 +19,15 @@
     "@types/node": "^22.8.6",
     "eslint": "^9.14.0",
     "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
     "prettier": "3.3.3",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.12.2"
+  },
+  "lint-staged": {
+    "*.ts": [
+      "npm run format:fix",
+      "npm run lint:fix"
+    ]
   }
 }
