--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "The user management service",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "format:fix": "prettier . --write",
     "format:check": "prettier . --check",
@@ -16,11 +17,14 @@
   "devDependencies": {
     "@eslint/js": "^9.14.0",
     "@types/eslint__js": "^8.42.3",
+    "@types/express": "^5.0.0",
     "@types/node": "^22.8.6",
     "eslint": "^9.14.0",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
+    "nodemon": "^3.1.7",
     "prettier": "3.3.3",
+    "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.12.2"
   },
@@ -31,6 +35,7 @@
     ]
   },
   "dependencies": {
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1"
   }
 }
