--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The user management service",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/server.ts",
+    "dev": "nodemon -L src/server.ts",
     "test": "jest --watch --runInBand",
     "format:fix": "prettier . --write",
     "format:check": "prettier . --check",
